# daylight_saved

./: .gitignore  Cargo.toml  LICENCE  README.md  generate.sh
.github/workflows/: pages.yaml
docs/: Adelaide.ics  Amsterdam.ics  Chicago.ics  Melbourne.ics  New_York.ics  Sydney.ics  index.html
src/: lib.rs  main.rs
