[package]
name = "daylight_saved"
version = "0.1.0"
edition = "2024"
default-run = "cli"

[dependencies]
jiff = "0.2.23"
axum = { version = "0.8.8", optional = true }
tokio = { version = "1.50.0", optional = true, features = ["rt-multi-thread"] }

[features]
webserver = ["dep:axum", "dep:tokio"]

[[bin]]
name = "webserver"
required-features = ["webserver"]